[project]
name = "LoRA-helper"
version = "0.1.0"
description = "LoRA Dataset Captioning Helper"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.128.0",
    "google-genai>=1.0.0",
    "httpx>=0.27.0",
    "jinja2>=3.1.6",
    "openai>=1.40.0",
    "python-dotenv>=1.2.1",
    "python-multipart>=0.0.21",
    "uvicorn>=0.40.0",
]
